tests/type-errors/arith_div_tez_rat.arl
archetype arith_div_tez_rat

entry main () {
  effect {
    var v = 1tz / 0.5
  }
}
